[project]
name = "csfloat-api"
version = "0.1.0"
description = "provides async-interface for csfloat_api"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.11"
dependencies = [
    "aiohttp (>=3.13.3,<4.0.0)",
    "aiohttp-socks (>=0.11.0,<0.12.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
